modules/gdscript/tests/scripts/analyzer/errors/invalid_array_index.gd
func test():
	# Error here. Array indices must be integers.
	print([0, 1][true])
